# dbt-clickhouse

./: .editorconfig  .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  dev_requirements.txt  mypy.ini  pyproject.toml  pytest.ini  setup.py  slack_clickhouse_service.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  lint.yml  pypi.yml  steps_local_testing.yml  test_cloud.yml  test_cloud_results.yml  test_local_matrix.yml  test_local_nightly.yml  test_matrix.yml
dbt/adapters/: __init__.py
dbt/adapters/clickhouse/: __init__.py  __version__.py  cache.py  chdbclient.py  clientadapter.py  column.py  connections.py  credentials.py  dbclient.py  errors.py  httpadapter.py  httpclient.py  impl.py  logger.py  nativeadapter.py  nativeclient.py  python_executor.py  query.py  relation.py  util.py
dbt/include/clickhouse/: dbt_project.yml  sample_profiles.yml
examples/new_mv_implementation/: .user.yml  README.md  dbt_project.yml  profiles.yml
examples/new_mv_implementation/models/: new_mv_mv1.sql  new_mv_mv2.sql  new_mv_target_model.sql  old_mv_model.sql  schema.yml  streaming_events_mv.sql  streaming_events_mv_mobile.sql  unit_tests.yml  user_activity_mv.sql
examples/new_mv_implementation/seeds/: events.csv  insert_events.sql  schema.yml
examples/taxis/: README.md  dbt_project.yml  profiles.yml
examples/taxis/dump/: taxi.sql
examples/taxis/models/: schema.yml  sources.yml  trips_inc.sql  trips_rand.sql
test/integration/: clickhouse.dbtspec
tests/: conftest.py  docker-compose.yml  github-docker-compose.yml
tests/integration/: access_management.xml  conftest.py  docker-compose.yml  test_config.xml  test_settings_22_3.xml  test_settings_23.xml  test_settings_24.xml  test_settings_latest.xml
tests/integration/adapter/: helpers.py  test_adapter.py  test_aliases.py  test_basic.py  test_changing_relation_type.py  test_column.py  test_comments.py  test_errors.py  test_grants.py  test_incremental.py  test_materialized_view.py  test_query_comments.py  test_relations.py  (+3 more)
tests/unit/: test_connections.py  test_dbclient.py  test_query_id.py  test_s3source_clause.py  test_slack_clickhouse_service.py  test_util.py  test_version_compatibility.py
(+125 files in other folders)
