[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dbt-clickhouse"
dynamic = ["version"]
description = "The Clickhouse plugin for dbt (data build tool)"
readme = "README.md"
license = "Apache-2.0"
authors = [
    {name = "ClickHouse Inc.", email = "guy@clickhouse.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.10"
dependencies = [
    "dbt-core>=1.9",
    "dbt-adapters>=1.22.0,<1.22.6",  # This version should be dbt-adapters<2.0, but keeping it fixed for now to avoid unexpected issues. We need to frequently update it.
    "clickhouse-connect>=0.10.0",
    "clickhouse-driver>=0.2.10"
]

[project.urls]
Homepage = "https://github.com/ClickHouse/dbt-clickhouse"
Repository = "https://github.com/ClickHouse/dbt-clickhouse"
Issues = "https://github.com/ClickHouse/dbt-clickhouse/issues"
Documentation = "https://github.com/ClickHouse/dbt-clickhouse#documentation"
Changelog = "https://github.com/ClickHouse/dbt-clickhouse/blob/main/CHANGELOG.md"
slack = "https://clickhouse.com/slack"

[tool.setuptools]
packages = {find = {include = ["dbt", "dbt.*"], namespaces = true}}

[tool.setuptools.package-data]
"dbt.include.clickhouse" = [
    "dbt_project.yml",
    "macros/*.sql",
    "macros/**/*.sql",
]

[tool.setuptools.dynamic]
version = {attr = "dbt.adapters.clickhouse.__version__.version"}

[tool.black]
line-length = 100
skip-string-normalization = true
target-version = ['py310', 'py311', 'py312']
exclude = '(\.eggs|\.git|\.mypy_cache|\.venv|venv|env|_build|build|dist)'

[tool.isort]
line_length = 100
profile = "black"
use_parentheses = true
skip = '.eggs/,.mypy_cache/,.venv/,venv/,env/'
known_third_party = ["pytest", "dbt"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "WARNING"
